terminado con dudas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <div class="back"> 
+
+  </div>
+<head> <div>
   <title>Instagram</title>
-</head>
+  <link rel="stylesheet" href="css/main.css">
+</div></head>
 <body>
-  Instagram
+  <div class="movil">
+  </div>
+  <div class="logo">
+  <img src="..//starter-code/images/brand.png" width=90%>
+  <alt="Instagram">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="boton-log">
+      <button type="submit">
+          <img src="..//starter-code/images/home.png" alt="Save icon"/>
+          
+          Log in
+          </button>
+  </div>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="cuadro-central">
+  <div class="texto-central">
+  <p> <h2>Capture and Share the World's Moments</h2></p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p> <h3>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free? </h3> </p>
+  </div>
+  </div>
 
+  <div class="app-store">
+    <img src="..//starter-code/images/badge-iphone.png" width=100%>
+    <alt="Download on the App Store">
+  </div>
+  <div class="google-play">
+    <img src="..//starter-code/images/badge-android.png" width=100%>
+  <alt="Get it on Google Play">
+  </div>
+
+  <div class="downer"> <h4>
   About Us
   Support
   Blog
@@ -25,7 +55,9 @@
   Jobs
   Privacy
   Terms
-
+  </h4> </div>
+  <div class="footer">
   &copy; 2014 Instagram
+  </div>
 </body>
 </html>
