--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <div class="left-box">
+  <div class="left-box col">
     <img src="images/phones.png" alt="">
   </div>
 
@@ -40,7 +40,7 @@
   </div>
 
 
-  <div class="nav-bar">
+  <div class="nav-bar nav-bar-li">
     <ul>
       <li>
         <a href="">About Us</a>
