--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  <div class="principal-container"> 
+  <main class="cabecera">
+    <div class="container-1"> <image src="./images/phones.png"> </image> </div>
+    <div class="container-2"> 
+        <div class="header"> <image src="./images/brand.png" class="img"> </image> <a href="#" class="button"> <image src="./images/home.png"> </image> Log in </a> </div>
+      <div class="container-3"> <h2 class="h2"> Capture and Share the World's Moments </h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      <div class="container-4"> 
+        <image src="./images/badge-iphone.png"> </image><image src="./images/badge-android.png"> </image> </div>
+<div style="clear: both"></div>
+</main>
+<footer>
+  <div class="list"> <ul style ="list-style-type:none">
+<li>About Us </li>
+<li>Support</li>
+<li>Blog</li>
+<li>Press</li>
+<li>API</li>
+<li>Jobs</li>
+<li>Privacy</li>
+<li>Terms</li>
+  </ul>
+</div>
   &copy; 2014 Instagram
+  </footer>
+  </div>
 </body>
 </html>
