No consigo mover el div del texto :S

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="top-half">
+    <div id="logo-login">
+      <div id="logo">
+        <img src="images/brand.png" alt="Instagram Logo">
+      </div>
+      <div id="login">
+        <button><img src="images/home.png" alt="House"><span id="login-text">Log in</span></button>
+      </div>
+    </div>
+  </div>
+  <div id="content">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p> 
+      <div id="stores">
+      </div>
+  </div>
+  <div id="bottom-half">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
 
-  Oh yeah, did we mention it's free?
+  
+
+
+  
 
   Download on the App Store
   Get it on Google Play
