captura de pantalla y boton "arreglado"

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,7 +19,7 @@
           <div class="items">
             <img src="images/brand.png" alt="instagram-logo">
           </div>
-          <div class="items">
+          <div class="items2">
             <a href="#"><img src="images/home.png" alt="home">Log in</a>
           </div>
           <div class="clearfix"></div>
