Enlace logo header

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,7 @@
     <!--Instagram-->
     <div class="inline right">
       <div class="pad-top short">
-        <img class="left" src="images/brand.png" alt="Instagram">
+        <a href="#"><img class="left" src="images/brand.png" alt="Instagram"></a>
         <div>
           <a class="right" href="#" id="button"><img id="house" src="images/home.png" alt="Log in">Log in</a>
         </div>
