--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
   <main>
-    <div class = "mobile"></div>
-    <div class = "insta"></div>
-    <div class = "logo"></div>
-    <div class = "input">Log In <button type="submit"><img src= "https://res.cloudinary.com/esponjita/image/upload/v1521582642/home.png"</button></div>
-    
- <div class = "text"></div>
+    <div class="mobile"></div>
+    <div class="insta"></div>
+    <div class="logo"></div>
+    <a class="input" href="#">
+      <img src="https://res.cloudinary.com/esponjita/image/upload/v1521582642/brand.png">
+    </a>;
+    <a type="submit">
+      <a class="link-btn" href="#">
+        <img src="https://res.cloudinary.com/esponjita/image/upload/v1521582642/home.png">Log In </a>
+      </div>
 
-  Instagram
+      <div class="text"></div>
 
-  Capture and Share the World's Moments
+      Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with friends
+      and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+      it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
+      did we mention it's free? Download on the App Store Get it on Google Play
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
- </div>
+      </div>
   </main>
   <footer>
-   <ul><p>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>&copy; 2014 Instagram</li>
-   </ul></p>
+    <ul>
+      <p>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+    </ul>
+    </p>
   </footer>
 </body>
+
 </html>
