Arreglado fondo y texto en clase

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,43 +24,45 @@
           <span>Login</span>
         </button>
       </nav>
-
-      <h1>Capture and share the World's Moments</h1>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
-        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.Oh yeah, did we mention it's free?</p>
+<div class="texto">
+  <h1>Capture and share <br> the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?</p>
 
       <img src="images/badge-iphone.png" alt="appstore">
       <img src="images/badge-android.png" alt="android">
+</div>
+    
 
     </section>
   </main>
   <footer>
     <ul>
-      <li class="azul">
+      <li >
         About Us
       </li>
-      <li class="azul">
+      <li >
         Support
       </li>
-      <li class="azul">
+      <li >
         Blog
       </li>
-      <li class="azul">
+      <li >
         Press
       </li>
-      <li class="azul">
+      <li >
         API
       </li>
-      <li class="azul">
+      <li >
         Jobs
       </li>
-      <li class="azul">
+      <li >
         Privacy
       </li>
-      <li class="azul">
+      <li >
         Terms
       </li>
-      <li class="azul">&copy; 2014 Instagram</li>
+      <li class="gris">&copy; 2014 Instagram</li>
     </ul>
   </footer>
 </body>
