Posicion Log in

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,8 +12,8 @@
     <div class="inline right">
       <div class="pad-top short">
         <a href="#"><img class="left" src="images/brand.png" alt="Instagram"></a>
-        <div>
-          <a class="right" href="#" id="button"><img id="house" src="images/home.png" alt="Log in">Log in</a>
+        <div class="">
+          <a class="right center" href="#" id="button"><img id="house" src="images/home.png" alt="Log in">Log in</a>
         </div>
       </div>
     </div>
