--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,59 +7,50 @@
 </head>
 
 <body>
-  <header class="header">
-  </header>
-
-  <section class="phones">
-    <div class="phone-images">
-      <img src="images/phones.png" alt="Mobile Phones">
+  <section class="main">
+    <div class="wrapper-column">
+      <div class="phone-column">
+          <img src="images/phones.png" alt="Mobile Phones">
+      </div>
+      <div class="content-column">
+        <div class="content-links">
+            <a href="#"><img src="images/brand.png" alt="Instagram Brand Image"></a>
+            <div class="button">
+                <a href="#">
+                  <img src="images/home.png" alt="Home Button">
+                  <span class="login">Log in</span>
+                </a>
+            </div>
+        </div>
+        <div class="content-text">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          </p>
+        </div>
+        <div class="content-markets">
+          <img class="market-item" src="images/badge-iphone.png" alt="Apple Store">
+          <img class="market-item" src="images/badge-android.png" alt="Play Store">
+        </div>
+      </div>
+      <div class="clear-fix"></div>
     </div>
   </section>
-
-  <section class="content">
-    <div class="main">
-      <a href="#">
-        <img src="images/brand.png" alt="Instagram Brand Image">
-      </a>
-      <button class="button">
-        <a href="#">
-          <img src="images/home.png" alt="Home Button">
-          <p>Log in</p>
-        </a>
-      </button>
-    </div>
-    <div class="text-content">
-      <div class="content-title">
-        <h1>Capture and Share<br>the World's Moments</h1>
-      </div>
-      <div class="content-text">
-        <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
-          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-        </p>
-      </div class="text-wrapper">
-    </div>
-    <div class="markets">
-        <img class="market-item" src="images/badge-iphone.png" alt="Apple Store">
-        <img class="market-item" src="images/badge-android.png" alt="Play Store">
-      </div>
-  </section>
-  <section class="footer float-fix">
-    <div class="contact">
+  <footer class="footer">
       <ul>
-        <li>ABOUT</li>
-        <li>US</li>
-        <li>SUPPORT</li>
-        <li>BLOG</li>
-        <li>PRESS</li>
-        <li>API</li>
-        <li>JOBS</li>
-        <li>PRIVACY</li>
-        <li>TERMS</li>
-        <li><span class="copy">2014 INSTAGRAM</span></li>
-      </ul>
-    </div>
-  </section>
+          <li>About</li>
+           <li>Us</li>
+           <li>Support</li>
+           <li>Blog</li>
+           <li>Press</li>
+           <li>API</li>
+           <li>Jobs</li>
+           <li>Privacy</li>
+           <li>Terms</li>
+           <li><span class="copy">2014 Instragam</span></li>
+         </ul>
+  </footer>
 </body>
 </html>
