--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
-  Instagram
+  <div class = "colorBlue">
+    </div>
+  <div class ="photo">
+    <img src="images/phones.png">
+   </div>
+   <div class="grosBloc"> 
+    <img src="images/brand.png">
+    <a img src="images/home.png" class ="homeButton" href="http://www.google.fr"> Log in  </a>
+    
+    
+    <div class ="fondTexte">
+      <h2 class="titreBloc">Capture and Share <br> the World's Moments </h2>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life <br> with friends and family. </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br> </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Oh yeah, did we mention it's free? </p>
 
-  Oh yeah, did we mention it's free?
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <div class="footerEnd">
+     <a class="trait" href="http://www.google.fr"> About Us </a>
+     <a class="trait" href="http://www.google.fr"> Support </a>
+     <a class="trait" href="http://www.google.fr"> Blog </a>
+     <a class="trait" href="http://www.google.fr">Press </a>
+     <a class="trait" href="http://www.google.fr">API </a>
+     <a class="trait" href="http://www.google.fr"> Jobs </a>
+     <a class="trait" href="http://www.google.fr">Privacy </a>
+     <a class="trait" href="http://www.google.fr"> Terms </a>
+  
 
-  &copy; 2014 Instagram
-</body>
+    &copy; 2014 Instagram
+  </div>
+   
+</footer>
+
+ </body>
+
 </html>
