--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  
+  <div class="blue-background"></div>
+ 
+  <div class="content-wrapper">
 
-  Capture and Share the World's Moments
+    <img class="phones" src="images/phones.png" alt="phones">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="right-side-wrapper">
+      <header>
+        <img class="instagram-logo" src="images/brand.png" alt="Instagram logo">
+        <div class="home-button">
+          <img src="images/home.png" alt="home button">
+          <p class="log-in">Log in</p>
+        </div>
+      </header>
+      
+      <section>
+        <h1>Capture and Share <br> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a <bold>fast</bold>, <bold>beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+      </section>
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+  
 </body>
 </html>
