--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+    <div class="content">
 
-  Capture and Share the World's Moments
+        <div class="left-side">
+            <img src="images/phones.png" alt="phones">
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="right-side">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <header>
+                <div class="logo">
+                    <img src="images/brand.png" alt="Instagram Logo">
+                </div>
+                <a href="#">
+                    <div class="sign-up">
+                        <img src="images/home.png" alt="Home" class="house">
+                        <p>Log-in</p>
+                    </div>
+                </a>
 
-  Oh yeah, did we mention it's free?
+            </header>
 
-  Download on the App Store
-  Get it on Google Play
+            <div class="mini-content">
+                <h2>Capture and Share the World's Moments</h2>
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+                    that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                </p>
+                <p>Oh yeah, did we mention it's free?</p>
+            </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            <div class="store">
+                <a href="#">
+                    <img src="images/badge-iphone.png" alt="Download on the App Store">
+                </a>
+                <a href="">
+                    <img src="images/badge-android.png" alt="Get it on Google Play">
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <footer>
+        <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li class="specific-li"> &copy; 2014 Instagram</li>
+        </ul>
+    </footer>
 </body>
+
 </html>
