--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <div>
+    <img class="phone-div" src="images/phones.png">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="content-div">
+    <div class="title-div">
+      <img src="images/brand.png">
+      <button class="home-button" type="button">
+        <img class="align-with-text" src="images/home.png"> <p>Log in</p>
+      </button>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="text-div">
+      <h2>Capture and Share <br> the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <div class="store-buttons">
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+  </div>
+  
+  <div>
+    <ul class="footers">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><span class="copyright">&copy; 2014 Instagram</span></li>
+    </ul>
+  </div>
 </body>
 </html>
