--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
+  </head>
+  
+  <body>
+    <div id="container">
+    <section class="section-left">
+        <img class="image" src="images/phones.png" alt="iphone"></img>
+    </section>
 
-  Capture and Share the World's Moments
+    <section class="section-right" alt"right">
+        <img class="image" src="images/brand.png" alt="Instagram"></img>
+        <button class="boxlogin" href="www.instagram.com"><img class="home" src="images/home.png" alt="home"></img>Log in
+        </button>
+      
+        <div class="boxtext">
+            <h1> Capture and Share the World's Moments
+              </h1>
+              <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>      
+        </div>
+    
+        <button class="link" href="www.apple.com"><img class="image" src="images/badge-iphone.png" alt="appleStore" ></img></button>
+        <button class="link" href="www.android.com"><img class="image" src="images/badge-android.png" alt="googlePlay"></img></button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </section >
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
 
-  Oh yeah, did we mention it's free?
+  <div text-align:"center" class="footer">
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <a class="span" href="www.instagram.com">About Us</a>
+    <a class="span" href="www.instagram.com">Support</a>
+    <a class="span" href="www.instagram.com">Blog</a>
+    <a class="span" href="www.instagram.com">Press</a>
+    <a class="span" href="www.instagram.com">API</a>
+    <a class="span" href="www.instagram.com">Jobs</a>
+    <a class="span" href="www.instagram.com">Privacy</a>
+    <a class="span" href="www.instagram.com">Terms</a>
+    <a class="grey" href="www.instagram.com">&copy; 2014 Instagram</a>
+  
+  </div class="footer">
 </body>
 </html>
