--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  
 
-  Capture and Share the World's Moments
+    <div class="veryTop">
+    <div class="position">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class= "phone">
+            <img  src="images/phones.png" alt="">
+          </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <header>
+        <img class="headImgLeft" src="images/brand.png" alt="">
+        <button class="headImgRight" disabled="disabled"><img  src="images/home.png" alt=""> Log In </button>
+      </header>
 
-  Oh yeah, did we mention it's free?
+  <div class="midd">
+    
+      <h2>
+          Capture and Share <br> the World's Moments
+      </h2>
+      <div class="container">
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p> 
+      <!-- <br> -->
+       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+      <br>
+       <p>Oh yeah, did we mention it's free?</p>
+       
+       <button disabled="disabled"> <img src="images/badge-iphone.png" alt=""> </button> 
+       <button disabled="disabled"> <img src="images/badge-android.png" alt=""> </button> 
+      </div>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  
 
+
+  
+
+</div>
+
+
+
+  <footer>
   About Us
   Support
   Blog
@@ -27,5 +57,10 @@
   Terms
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
+
+
+
+<!-- --------------------------------------------------- -->
