--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
-<body>
-  Instagram
+  <body>
+      <div class="left">
+        <img src="../starter-code/images/phones.png" alt="">
+      </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="right">
+        <div class="logo">
+         <img src="../starter-code/images/brand.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+         <img src="../starter-code/images/home.png">
 
-  Oh yeah, did we mention it's free?
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="backgroundFrame">
+         <h1>Capture and Share
+          <br> the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+           <div class="description">
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      
+             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      
+             <p>Oh yeah, did we mention it's free?</p>
+           </div>
 
-  &copy; 2014 Instagram
+              <div class="buttonApple">
+                 <img src="../starter-code/images/badge-iphone.png">
+              </div>
+
+              <div class="buttonAndroid">
+                 <img src="../starter-code/images/badge-android.png">
+              </div>
+          </div>  
+       </div>
+
+    <footer class="footer clearfix"> 
+
+<ul class="list">
+<li class="li">About Us</li>
+<li class="li">Support</li>
+<li class="li">Blog</li>
+<li class="li">Press</li>
+<li class="li">API</li>
+<li class="li">Jobs</li>
+<li class="li">Privacy</li>
+<li class="li">Terms</li>
+
+<li class="copyright li"> &copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
