--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="content">
+      <div class="phones">
+        <img src="./images/phones.png" alt="Phone photo">
+      </div> <!-- class phones -->
+      <div class="side-text">
+        <div class="insta-title">
+            <img src='./images/brand.png' alt='Instagram' class="insta-logo">
+            <div class="btn-log"><button><img src='./images/home.png'> Log in</button></div>
+        </div>
+        <div class="insta-description">
+          <h2>
+           Capture and Share the World's Moments
+          </h2>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          <p>
+        </div>
+        <div class="insta-buttons">
+          <button class="btn-app-store"><a href='#'><img src="./images/badge-iphone.png" alt="Download on the App Store"></a></button>
+          <button class="btn-google-play"><a href='#'><img src='./images/badge-android.png' alt='Get it on Google Play'></a></button>
+        </div>
+      </div> <!-- class side-text -->
+    </div> <!-- class content-->
 
-  Capture and Share the World's Moments
+    <footer>
+   <a href="">About Us</a>
+   <a href=""> Support</a>
+   <a href=""> Blog</a>
+   <a href=""> Press</a>
+   <a href=""> API</a>
+   <a href=""> Jobs</a>
+   <a href=""> Privacy</a>
+   <a href=""> Terms</a>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
+    </footer>
 </body>
 </html>
