--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css"/>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="bgtile">
+</div>
+    
+    <div class="big-div">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<img class="phones-img" src="./images/phones.png" alt="phones image"/>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
+
+
+<img class="brand-img" src="./images/brand.png" alt="instagram brand logo"/>
+<button class="btn">Log in</button>
+
+</div>
+
+<div class="border">
+    <section class="text">
+  <h1>
+  Capture and Share <br>the World's Moments
+  </h1>
+
+  <p>
+  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br>with friends and family. <br> 
+</p>
+
+<p>
+  Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.
+</p>
+
+<p>
   Oh yeah, did we mention it's free?
+</p>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<img src="./images/badge-iphone.png" alt="iphone download image" class="download"/>
+<img src="./images/badge-android.png" alt="android download image" class="download"/>
+</section>
 
-  &copy; 2014 Instagram
+
+</div>
+</div>
+<footer>
+  <ul>
+  <li><a href="#" class="link">About Us</a></li>
+  <li><a href="#" class="link">Support</a></li>
+  <li><a href="#" class="link">Blog</a></li>
+  <li><a href="#" class="link">Press</a></li>
+  <li><a href="#" class="link">API</a></li>
+  <li><a href="#" class="link">Jobs</a></li>
+  <li><a href="#" class="link">Privacy</a></li>
+  <li><a href="#" class="link">Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
+
+
 </body>
 </html>
