--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,20 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="wrapper">
+    <div class="container">
+      <div id="logo-instagram">
+        <img src="images/brand.png" alt="logo-instagram">
+      </div>
+      <div id="log-in-button">
+        <p>Log-in</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container-left">
+    <div id="iphone-picture">
+      <img src="images/phones.png">
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="container-right">
+    <div class="content">
+      <h2> Capture and Share the World's Moments</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
+  <div class="container-buttons">
+    <div class="buttons-download">
+      <img src="images/badge-iphone.png" alt="image-button-iphone">
+      <img src="images/badge-android.png" alt="image-button-android">
+    </div>
+  </div>
 
   About Us
   Support
