--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="body">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="left">
+      <img class="phones" src="./images/phones.png" alt="phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="right">
+    <img class="logo" src="./images/brand.png" alt="Instagram logo">
+    <button class="login"><img class="home" src="./images/home.png" alt="Home"><span class="button"> Log in</span></button>
+    <div class="text-container">
+      <img class="frame" src="./images/frame.png" alt="frame">
+      <div class="title"><h2>Capture and Share <br> the World's Moments</h2></div>
+      <div class="container-body">
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img class="stores" src="./images/badge-iphone.png" alt="apple store">
+        <img class="stores" src="./images/badge-android.png" alt="play store">
+      </div>
+    </div>
+  </div>
+  
+ 
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+
+
+
+
+
+<footer class="footer" id="footer">
+  <ul>
+    <li><a href="#" target="_blank">About Us</li></a>
+    <li><a href="#" target="_blank">Support</li></a>
+    <li><a href="#" target="_blank">Blog</li></a>
+    <li><a href="#" target="_blank">Press</li></a>
+    <li><a href="#" target="_blank">API</li></a>
+    <li><a href="#" target="_blank">Jobs</li></a>
+    <li><a href="#" target="_blank">Privacy</li></a>
+    <li><a href="#" target="_blank">Terms</li></a>
+  </ul>
+    <span class="copyright">&copy; 2014 Instagram</span>
+</footer>
 </body>
 </html>
+
