--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css"/>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+    <div class="container">     
+      <img class="phone" src="./images/phones.png" alt="phones image">    
+      <div class="Container-Text">
+        <header class="header-img">
+          <img class="img-brand" src="./images/brand.png" alt="brand image"> 
+          <div class="img-home">         
+                <img  src="./images/home.png" alt="home image">
+                Log in
+          </div>
+        </header>
+          <div class="box">
+            <h1>Capture and Share <br> the World's Moments</h1> 
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>      
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>      
+              <p>Oh yeah, did we mention it's free?</p> 
+              <div class="footer-badge">
+                <img class="img-androide" src="./images/badge-android.png" alt="badge androide image">  
+                <img class="img-iphone" src="./images/badge-iphone.png" alt="badge iphone image">
+              </div>        
+          </div>      
+      </div>
+      <div class="clearfix">
+  </div>
+  
+  <footer>
+    
+    <ul>
+        <li class="nav-bar-li">ABOUT US</li>
+        <li class="nav-bar-li"> SUPPORT </li>
+        <li class="nav-bar-li">BLOG</li>
+        <li class="nav-bar-li">PRESS</li>
+        <li class="nav-bar-li">API</li>
+        <li class="nav-bar-li">JOBS</li>
+        <li class="nav-bar-li">PRIVACY</li>
+        <li class="nav-bar-li">TERMS</li>
+        <li class="li-Insta nav-bar-li">2004 INTAGRAM</li>
 
-  Capture and Share the World's Moments
+    </ul>  
+  </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
