--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="../starter-code/css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  
+  <h1>Instagram</h1>
 
-  Capture and Share the World's Moments
+  <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> 
+    way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, 
+    then post to Instagram &mdash; it's that easy. You can even share to Facebook, 
+    Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
+  Download on the <h4>App Store</h4>
   Get it on Google Play
 
   About Us
