--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <img src="images/bgtile.png" class="divline">
+  <div class="content">
+    <img src="images/phones.png" class="phones">
+    <div class="right-side">
+      <div>
+        <img class="brand" src="images/brand.png">
+        <button class="log-in"> <img src="images/home.png"><strong>Log in</strong></button>
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="description">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+      </div>
+    </div>
+    <div class="bottom">
+      <ul>
+        <li class="link first"><b>About Us</b></li>
+        <li class="link"><b>Support</b></li>
+        <li class="link"><b>Blog</b></li>
+        <li class="link"><b>Press</b></li>
+        <li class="link"><b>API</b></li>
+        <li class="link"><b>Jobs</b></li>
+        <li class="link"><b>Privacy</b></li>
+        <li class="link"><b>Terms</b></li>
+        <li class="link">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
