Initial commit of Instagram clone.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type: "text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phones">
+    <img src="./images/phones.png" alt="Mobile phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="rightContent">
+    <div class="headerElements">
+      <img src="./images/brand.png" alt="Instagram Logo" class="logo">
+      <button class="login">
+        <img src="./images/home.png" alt="Home icon" class="homeIcon"> Log in
+      </button>
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="mainContent">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="./images/badge-iphone.png" alt="Download on the App Store." class="download">
+      <img src="./images/badge-android.png" alt="Download on Google Play." class="download">
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &nbsp&nbsp&nbsp © 2014 Instagram
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
